--- a/src/app.html
+++ b/src/app.html
@@ -2,11 +2,31 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
+		<meta name="color-scheme" content="dark light" />
+		<meta name="theme-color" content="#FEFCFB" />
+		<link rel="preconnect" href="https://use.typekit.net" crossorigin />
+		<link rel="icon" href="%sveltekit.assets%/favicon.svg" type="image/svg+xml" />
+		<link
+			rel="icon"
+			href="%sveltekit.assets%/favicon-light.png"
+			type="image/png"
+			media="(prefers-color-scheme: light)"
+		/>
+		<link
+			rel="icon"
+			href="%sveltekit.assets%/favicon-dark.png"
+			type="image/png"
+			media="(prefers-color-scheme: dark)"
+		/>
+		<link rel="apple-touch-icon" href="%sveltekit.assets%/apple-touch-icon.png" />
+		<link rel="manifest" href="%sveltekit.assets%/manifest.json" />
+		<link rel="stylesheet" href="https://use.typekit.net/hjc0gsm.css" />
+		<!-- Missing: OG Images, Title, Description, Canonical URL, Sitemap -->
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">%sveltekit.body%</div>
+		<script src="%sveltekit.assets%/scripts/preloadTheme.js"></script>
 	</body>
 </html>
