--- a/src/app.html
+++ b/src/app.html
@@ -23,19 +23,13 @@
     <link rel="manifest" href="%sveltekit.assets%/manifest.json" />
     <link rel="stylesheet" href="https://use.typekit.net/hjc0gsm.css" />
     <title>Genderswap.fm</title>
-    <meta name="description" content="Some covers deliver the age-old simple pleasures of drag." />
-    <meta property="og:title" content="{title}" />
     <meta property="og:type" content="website" />
     <meta property="og:locale" content="en_US" />
     <meta property="og:site_name" content="Genderswap.fm" />
-    <meta property="og:image" content="%sveltekit.assets%/og-image.png" />
-    <meta property="og:image:alt" content="Genderswap.fm" />
-    <!-- Missing: Route-specific OG Images, Canonical URL, Sitemap -->
-    <!-- Missing: lazysizes -->
     %sveltekit.head%
   </head>
   <body data-sveltekit-preload-data="hover">
-    <div style="display: contents">%sveltekit.body%</div>
+    %sveltekit.body%
     <script src="%sveltekit.assets%/scripts/preloadTheme.js"></script>
   </body>
 </html>
