--- a/src/app.html
+++ b/src/app.html
@@ -29,7 +29,7 @@
     %sveltekit.head%
   </head>
   <body data-sveltekit-preload-data="hover">
-    %sveltekit.body%
+    <div style="display: contents">%sveltekit.body%</div>
     <script src="%sveltekit.assets%/scripts/preloadTheme.js"></script>
   </body>
 </html>
