Use font-display: fallback and preload fonts

--- a/src/app.html
+++ b/src/app.html
@@ -20,6 +20,27 @@
     />
     <link rel="apple-touch-icon" href="%sveltekit.assets%/apple-touch-icon.png" />
     <link rel="manifest" href="%sveltekit.assets%/manifest.json" />
+    <link
+      rel="preload"
+      href="%sveltekit.assets%/fonts/LabilGrotesk-Regular.woff2"
+      as="font"
+      type="font/woff2"
+      crossorigin
+    />
+    <link
+      rel="preload"
+      href="%sveltekit.assets%/fonts/LabilGrotesk-Bold.woff2"
+      as="font"
+      type="font/woff2"
+      crossorigin
+    />
+    <link
+      rel="preload"
+      href="%sveltekit.assets%/fonts/LabilGrotesk-RegularItalic.woff2"
+      as="font"
+      type="font/woff2"
+      crossorigin
+    />
     <title>Genderswap.fm</title>
     <meta property="og:type" content="website" />
     <meta property="og:locale" content="en_US" />
