--- a/src/app.html
+++ b/src/app.html
@@ -46,6 +46,7 @@
     <meta property="og:locale" content="en_US" />
     <meta property="og:site_name" content="Genderswap.fm" />
     %sveltekit.head%
+    <script src="https://cdn.usefathom.com/script.js" data-site="HPMILITY" defer></script>
   </head>
   <body data-sveltekit-preload-data="hover">
     <script>
