--- a/src/app.html
+++ b/src/app.html
@@ -38,7 +38,7 @@
     document.body.classList.toggle('dark', initialTheme === 'dark');
 
     // Set initial theme-color
-    const themeColor = initialTheme === 'dark' ? '#121113' : '#FEFCFB';
+    const themeColor = initialTheme === 'dark' ? 'color(display-p3 0.07 0.067 0.074)' : 'color(display-p3 0.991 0.988 0.992)';
     const metaThemeColor = document.querySelector("meta[name=theme-color]");
     if (metaThemeColor) {
       metaThemeColor.setAttribute("content", themeColor);
