--- a/src/app.html
+++ b/src/app.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
   <meta name="color-scheme" content="dark light" />
-  <meta name="theme-color" content="#FEFCFB" />
+  <meta name="theme-color" content="" />
   <link rel="icon" href="%sveltekit.assets%/favicon.svg" type="image/svg+xml" />
   <link rel="icon" href="%sveltekit.assets%/favicon-light.png" type="image/png" media="(prefers-color-scheme: light)" />
   <link rel="icon" href="%sveltekit.assets%/favicon-dark.png" type="image/png" media="(prefers-color-scheme: dark)" />
