--- a/src/app.html
+++ b/src/app.html
@@ -35,7 +35,7 @@
     };
 
     const initialTheme = getUserPreference();
-    document.body.classList.toggle('dark', initialTheme === 'dark');
+    document.documentElement.classList.toggle('dark', initialTheme === 'dark');
 
     // Set initial theme-color
     const themeColor = initialTheme === 'dark' ? 'color(display-p3 0.07 0.067 0.074)' : 'color(display-p3 0.991 0.988 0.992)';
